--- a/src/app/components/compte/compte.component.html
+++ b/src/app/components/compte/compte.component.html
@@ -16,8 +16,9 @@
 
   <div class="card">
     <div class="card-body">
-      <table class="table table-striped">
-        <thead>
+      <div class="table-responsive">
+        <table class="table table-striped align-middle">
+                  <thead>
           <tr>
             <th>#</th>
             <th>RIB</th>
