--- a/src/app/components/client/client.component.html
+++ b/src/app/components/client/client.component.html
@@ -12,7 +12,8 @@
     <!-- Client Table -->
     <div class="card">
       <div class="card-body">
-        <table class="table table-striped">
+        <div class="table-responsive">
+          <table class="table table-striped align-middle">
           <thead>
             <tr>
               <th>#</th>
