--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,8 @@
+<div *ngIf="isLoading" class="loader-container">
+  <div class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
 
 <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
   data-sidebar-position="fixed" data-header-position="fixed">
@@ -8,7 +13,7 @@
         <div class="col-md-8 col-lg-6 col-xxl-3">
           <div class="card mb-0">
             <div class="card-body">
-              <a href="./index.html" class="text-nowrap logo-img text-center d-block py-3 w-100">
+              <a href="#" class="text-nowrap logo-img text-center d-block py-3 w-100">
                 <img src="../../../assets/images/logos/Yes_Bank_SVG_Logo.svg.png" width="180" alt="">
               </a>
               <p class="text-center">Connecter ici !</p>
